syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/state_machine/types";

message Params {
  ConsensusParams Consensus = 1;
  ValidatorParams Validator = 2;
  FeeParams Fee = 3;
  GovernanceParams Governance = 4;
}

message ProtocolVersion {
  uint64 height = 1;
  uint64 version = 2;
}

message ConsensusParams {
  Uint64Param block_size = 1;
  StringParam protocol_version = 2;
}

message ValidatorParams {
  StringParam validator_minimum_stake = 1;
  Uint64Param validator_unstaking_blocks = 2;
  Uint64Param validator_minimum_pause_blocks = 3;
  Uint64Param validator_max_pause_blocks = 4;
  Uint64Param validator_maximum_missed_blocks = 5;
  Uint64Param validator_max_evidence_age_in_blocks = 6;
  Uint64Param validator_missed_blocks_slash_percentage = 7;
  Uint64Param validator_double_sign_slash_percentage = 8;
  Uint64Param validator_double_sign_reporter_reward = 9;
  Uint64Param validator_proposer_percentage_of_fees = 10;
}

message FeeParams {
  StringParam message_send_fee = 1;
  StringParam message_stake_fee = 2;
  StringParam message_edit_stake_fee = 3;
  StringParam message_unstake_fee = 4;
  StringParam message_pause_fee = 5;
  StringParam message_unpause_fee = 6;
  StringParam message_change_parameter_fee = 7;
  StringParam message_double_sign_fee = 8;
}

message GovernanceParams {
  string acl_owner = 1;
}

message StringParam {
  string value = 1;
  string owner = 2;
}

message Uint64Param {
  uint64 value = 1;
  string owner = 2;
}